# luckfox-pico

./: .BoardConfig.mk  .gitignore  .gitmodules  .gitmodules.gitee  .gitmodules.github  README.md  README_CN.md  README_CN_luckyfox.md  UPDATE_LOG.md  UPDATE_LOG_CN.md  build.sh  note  readme_cn.txt  readme_en.txt  rkflash.sh
app/joystick_autosar/: CMakeLists.txt
app/joystick_autosar/src/: peer_client.cpp  peer_server.cpp  udp_signaling.hpp
app/joystick_data_channel/: CMakeLists.txt
app/joystick_data_channel/src/: main.cpp
app/joystick_data_channel/src/app/: ControlState.cpp  ControlState.hpp  EventHandler.cpp  EventHandler.hpp  EventRing.hpp  SafetyManager.cpp  SafetyManager.hpp  VehicleState.cpp  VehicleState.hpp
app/joystick_data_channel/src/com/: Frame.hpp  FrameCodec.cpp  FrameCodec.hpp  PduTypes.hpp  RxDispatcher.cpp
app/joystick_data_channel/src/io/: JoystickInput.cpp  JoystickInput.hpp  Watchdog.cpp  Watchdog.hpp
app/joystick_data_channel/src/signaling/: PeerClient.cpp  PeerClient.hpp  SignalingEvents.hpp  SignalingManager.cpp  SignalingManager.hpp  SignalingQueue.hpp  udp_signaling.cpp  udp_signaling.hpp
app/joystick_data_channel/src/transport/: ITransport.hpp  LoopbackTransport.cpp  WebRTCTransport.cpp  WebRTCTransport.hpp
app/libdc_udp_demo_luckfox/: CMakeLists.txt  Readme
app/libdc_udp_demo_luckfox/src/: peer_client.cpp  peer_server.cpp
app/libdc_udp_demo_testing _upgrade_server/: CMakeLists.txt  README.md
app/libdc_udp_demo_testing _upgrade_server/src/: PeerServer.cpp  PeerServer.hpp  WebRTCTransport.cpp  WebRTCTransport.hpp  main.cpp  udp_signaling.cpp
app/libdc_udp_demo_testing _upgrade_server/src/app/: EventRing.hpp  IoctlController.cpp  IoctlController.hpp  Time.cpp
app/libdc_udp_demo_testing _upgrade_server/src/com/: FrameCodec.cpp  FrameCodec.hpp  PduTypes.hpp  RxDispatcher.cpp  RxDispatcher.hpp
app/libdc_udp_demo_testing _upgrade_server/src/signaling/: PeerServer.cpp  PeerServer.hpp  SignalingManager.cpp  base64.hpp
app/libdc_udp_demo_testing _upgrade_server/src/transport/: WebRTCTransport.cpp  WebRTCTransport.hpp
app/sample-send-number/: CMakeLists.txt  luckfox-armv7.cmake  main.cpp
app/webrtc_demo/: CMakeLists.txt
app/webrtc_demo/src/: main.cpp  module.cpp
app/webrtc_demo_data/: CMakeLists.txt
app/webrtc_demo_data/src/: main.cpp
media/common_algorithm/common_algorithm/audio/: .gitignore  CMakeLists.txt  Changelog.txt
media/common_algorithm/common_algorithm/audio/rkaed/: CMakeLists.txt  Main.cpp  Rockchip_Developer_Guide_Sound_Event_Detection.md
media/common_algorithm/common_algorithm/audio/rkap_3a/: CMakeLists.txt  README.md
media/common_algorithm/common_algorithm/audio/rkap_anr/: CMakeLists.txt
media/common_algorithm/common_algorithm/audio/rkap_common/: CMakeLists.txt
media/common_algorithm/common_algorithm/audio/rkaudio_algorithms/: CMakeLists.txt  config_aivqe.json  config_aoagc.json  rkaudio_preprocess.h  rkaudio_sed.h
media/common_algorithm/common_algorithm/audio/rkskv/: CMakeLists.txt
media/common_algorithm/common_algorithm/misc/: CMakeLists.txt
media/isp/release_camera_engine_rkaiq_rv1106_arm-rockchip830-linux-uclibcgnueabihf/rkisp_demo/: Android.mk  CMakeLists.txt
media/isp/release_camera_engine_rkaiq_rv1126_arm-rockchip830-linux-gnueabihf/rkisp_demo/: CMakeLists.txt  README  setup_link.sh
media/iva/iva/: CMakeLists.txt
media/ive/ive/: CMakeLists.txt
media/ive/ive/include/: ivs_md.h  rk_comm_ive.h  rk_ive.h  rk_md.h  rk_mpi_ive.h
media/ive/ive/sample/: main.c  sample_comm_mem.h  sample_comm_rve.c  sample_comm_rve.h  sample_rve_hist.c  sample_rve_mem.c  sample_rve_object_tracking.c
media/ive/ive/simulator/: Add.c  And.c  BGM.c  CCL.c  CSC.c  Canny.c  Cast.c  DMA.c  Dilate.c  Erode.c  Filter.c  GMM.c  Hist.c  Integ.c  LBP.c  LKOpticalFlow.c  MagAndAng.c  Map.c  Ncc.c  Or.c  OrdStatFilter.c  SAD.c  Shitomasi.c  Sobel.c  Sub.c  Thresh.c  Xor.c  main.c  rve_tests.h
media/rga/release_rga_rv1106_arm-rockchip830-linux-uclibcgnueabihf/rga_samples/: CMakeLists.txt  cmake-android.sh
media/rockit/rockit/: .gitignore  CMakeLists.txt  README.md  commit.txt
media/rockit/rockit/mpi/: CMakeLists.txt
media/rockit/rockit/tgi/: CMakeLists.txt
media/security/librkcrypto/: .gitignore  Android.mk  CMakeLists.txt  README.md  build.sh
media/security/librkcrypto/demo/: Android.mk  Makefile  demo_ae.c  demo_cipher.c  demo_hash.c  demo_otpkey.c  demo_rsa.c  rkcrypto_demo.c  rkcrypto_demo.h
media/security/librkcrypto/include/: cryptodev.h  dma-heap.h  rk_cryptodev.h  rk_list.h  rkcrypto_common.h  rkcrypto_core.h  rkcrypto_core_int.h  rkcrypto_mem.h  rkcrypto_otp_key.h  rkcrypto_random.h  rkcrypto_trace.h
media/security/librkcrypto/perf_reports/: RK3528_perf.txt  RK3562_perf.txt  RK3566_perf.txt  RK3588_perf.txt  RV1106_perf.txt  ReadMe_CN.md  ReadMe_EN.md
media/security/librkcrypto/src/: rkcrypto_core.c  rkcrypto_mem.c  rkcrypto_otp_key.c  rkcrypto_random.c  rkcrypto_rsa_helper.c  rkcrypto_rsa_helper.h  rkcrypto_trace.c
media/security/librkcrypto/test/: Android.mk  CMakeLists.txt  cmode_adapter.c  cmode_adapter.h  main.c  rsa_key_data.c  rsa_key_data.h  test_ae.c  test_ae.h  test_cipher.c  test_cipher.h  test_crypto_mem.c  test_crypto_mem.h  test_hash.c  test_hash.h  test_multi.c  test_multi.h  test_otp_key_crypto.c  test_otp_key_crypto.h  test_random.c  test_random.h  test_rsa.c  test_rsa.h  test_stress.c  test_stress.h  test_throughput.c  test_throughput.h  test_utils.c  test_utils.h
media/security/rk_tee_user/v2/: Android.mk  CMakeLists.txt  CMakeToolchain.txt  LICENSE.md  Makefile  README.md  README_FOR_RK.md  build.sh
project/app/ipcweb/ipcweb-backend/: .clang-format  .editorconfig  .gitignore  AUTHORS  CMakeLists.txt  README.md  costdown-www-rkipc.sh  format.sh  mini-ipcweb-ng.rar
project/app/rk_smart_door/smart_door/: CMakeLists.txt  format.sh
project/app/rkipc/rkipc/: .clang-format  .gitignore  CMakeLists.txt
project/app/uvc_app_tiny/uvc_app/: CMakeLists.txt  LICENSE  RkLunch-stop.sh  RkLunch.sh  format.sh  main.c  rkuvc.ini  usb_config.sh  uvc_mpi_cfg.conf
(+11734 files in other folders)
